--- a/bump-package-versions/interfaces/options.html
+++ b/bump-package-versions/interfaces/options.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Options | @khai96x/bump-package-versions — Reference</title>
-	<meta name="description" content="">
+	<meta name="description" content="Documentation for @khai96x/bump-package-versions — Reference">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -13,7 +13,7 @@
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.js" data-base="..">
+				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.json" data-base="..">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -104,81 +104,81 @@
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="changetype" class="tsd-anchor"></a>
-					<h3>change<wbr>Type</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> change<wbr>Type</h3>
 					<div class="tsd-signature tsd-kind-icon">change<wbr>Type<span class="tsd-signature-symbol">:</span> <a href="../enums/changetype.html" class="tsd-signature-type">ChangeType</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L61">index.ts:61</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L61">index.ts:61</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="console" class="tsd-anchor"></a>
-					<h3>console</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> console</h3>
 					<div class="tsd-signature tsd-kind-icon">console<span class="tsd-signature-symbol">:</span> <a href="console.html" class="tsd-signature-type">Console</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L66">index.ts:66</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L66">index.ts:66</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="filenames" class="tsd-anchor"></a>
-					<h3>filenames</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> filenames</h3>
 					<div class="tsd-signature tsd-kind-icon">filenames<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">AsyncIterable</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L60">index.ts:60</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L60">index.ts:60</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="finalnewlines" class="tsd-anchor"></a>
-					<h3>final<wbr>New<wbr>Lines</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> final<wbr>New<wbr>Lines</h3>
 					<div class="tsd-signature tsd-kind-icon">final<wbr>New<wbr>Lines<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L64">index.ts:64</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L64">index.ts:64</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="fs" class="tsd-anchor"></a>
-					<h3>fs</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> fs</h3>
 					<div class="tsd-signature tsd-kind-icon">fs<span class="tsd-signature-symbol">:</span> <a href="filesystem.html" class="tsd-signature-type">FileSystem</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L65">index.ts:65</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L65">index.ts:65</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="jsonindent" class="tsd-anchor"></a>
-					<h3>json<wbr>Indent</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> json<wbr>Indent</h3>
 					<div class="tsd-signature tsd-kind-icon">json<wbr>Indent<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L63">index.ts:63</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L63">index.ts:63</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="process" class="tsd-anchor"></a>
-					<h3>process</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> process</h3>
 					<div class="tsd-signature tsd-kind-icon">process<span class="tsd-signature-symbol">:</span> <a href="process.html" class="tsd-signature-type">Process</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ExitReturn</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L67">index.ts:67</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L67">index.ts:67</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
 					<a name="skipprivate" class="tsd-anchor"></a>
-					<h3>skip<wbr>Private</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> skip<wbr>Private</h3>
 					<div class="tsd-signature tsd-kind-icon">skip<wbr>Private<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/bump-package-versions/index.ts#L62">index.ts:62</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/bump-package-versions/index.ts#L62">index.ts:62</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -267,57 +267,8 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
-				<li class="tsd-kind-module"><span class="tsd-kind-icon">Module</span></li>
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
-				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
-				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
-				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
-				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
-				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
-				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
-				<li class="tsd-kind-enum-member"><span class="tsd-kind-icon">Enumeration member</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-enum"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-enum"><span class="tsd-kind-icon">Method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
-				<li class="tsd-kind-interface tsd-has-type-parameter"><span class="tsd-kind-icon">Interface with type parameter</span></li>
-				<li class="tsd-kind-constructor tsd-parent-kind-interface"><span class="tsd-kind-icon">Constructor</span></li>
 				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
 				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
-				<li class="tsd-kind-index-signature tsd-parent-kind-interface"><span class="tsd-kind-icon">Index signature</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
-				<li class="tsd-kind-class tsd-has-type-parameter"><span class="tsd-kind-icon">Class with type parameter</span></li>
-				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class"><span class="tsd-kind-icon">Accessor</span></li>
-				<li class="tsd-kind-index-signature tsd-parent-kind-class"><span class="tsd-kind-icon">Index signature</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited constructor</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
-				<li class="tsd-kind-call-signature tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
 			</ul>
 		</div>
 	</div>
@@ -327,6 +278,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
