--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <main>
       <nav>
         <ul>
-          <li class='child' data-name="@khai96x/all" data-version="0.0.13" data-description="All packages within @khai96x" data-route="all/index.html" data-npm="https://www.npmjs.com/package/@khai96x/all">
+          <li class='child' data-name="@khai96x/all" data-version="0.0.14" data-description="All packages within @khai96x" data-route="all/index.html" data-npm="https://www.npmjs.com/package/@khai96x/all">
             <article>
               <a class='link name' target='@khai96x/all' href='all/index.html'>@khai96x/all</a>
-              <span class='version' title='version'>0.0.13</span>
+              <span class='version' title='version'>0.0.14</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/all'>[npm]</a>
               <p class='description'><span title='package description'>All packages within @khai96x</span></p>
             </article>
@@ -84,12 +84,20 @@
               <p class='description'><span title='package description'>Find all sh/bash files from CLI arguments</span></p>
             </article>
           </li>
-          <li class='child' data-name="@khai96x/my-observables" data-version="0.0.4" data-description="Events that I use" data-route="my-observables/index.html" data-npm="https://www.npmjs.com/package/@khai96x/my-observables">
+          <li class='child' data-name="@khai96x/my-observables" data-version="0.0.5" data-description="Events that I use" data-route="my-observables/index.html" data-npm="https://www.npmjs.com/package/@khai96x/my-observables">
             <article>
               <a class='link name' target='@khai96x/my-observables' href='my-observables/index.html'>@khai96x/my-observables</a>
-              <span class='version' title='version'>0.0.4</span>
+              <span class='version' title='version'>0.0.5</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/my-observables'>[npm]</a>
               <p class='description'><span title='package description'>Events that I use</span></p>
+            </article>
+          </li>
+          <li class='child' data-name="@khai96x/pacman" data-version="0.0.0" data-description="Utilities related to ArchLinux Package Manager (pacman)" data-route="pacman/index.html" data-npm="https://www.npmjs.com/package/@khai96x/pacman">
+            <article>
+              <a class='link name' target='@khai96x/pacman' href='pacman/index.html'>@khai96x/pacman</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/pacman'>[npm]</a>
+              <p class='description'><span title='package description'>Utilities related to ArchLinux Package Manager (pacman)</span></p>
             </article>
           </li>
           <li class='child' data-name="@khai96x/shebang" data-version="0.0.0" data-description="Extract shebang information from a file" data-route="shebang/index.html" data-npm="https://www.npmjs.com/package/@khai96x/shebang">
