--- a/my-observables/classes/statusdiff.html
+++ b/my-observables/classes/statusdiff.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>StatusDiff | @khai96x/my-observables — Reference</title>
-	<meta name="description" content="">
+	<meta name="description" content="Documentation for @khai96x/my-observables — Reference">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -13,7 +13,7 @@
 	<div class="tsd-page-toolbar">
 		<div class="container">
 			<div class="table-wrap">
-				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.js" data-base="..">
+				<div class="table-cell" id="tsd-search" data-index="../assets/js/search.json" data-base="..">
 					<div class="field">
 						<label for="tsd-search-field" class="tsd-widget search no-caption">Search</label>
 						<input id="tsd-search-field" type="text" />
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/my-observables/lib/ac-adapter.ts#L34">lib/ac-adapter.ts:34</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/my-observables/lib/ac-adapter.ts#L32">lib/ac-adapter.ts:32</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -125,21 +125,21 @@
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-external">
 					<a name="newstatus" class="tsd-anchor"></a>
-					<h3>new<wbr>Status</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> new<wbr>Status</h3>
 					<div class="tsd-signature tsd-kind-icon">new<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/my-observables/lib/ac-adapter.ts#L37">lib/ac-adapter.ts:37</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/my-observables/lib/ac-adapter.ts#L35">lib/ac-adapter.ts:35</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-external">
 					<a name="oldstatus" class="tsd-anchor"></a>
-					<h3>old<wbr>Status</h3>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> old<wbr>Status</h3>
 					<div class="tsd-signature tsd-kind-icon">old<wbr>Status<span class="tsd-signature-symbol">:</span> <a href="../enums/status.html" class="tsd-signature-type">Status</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/334f815/packages/my-observables/lib/ac-adapter.ts#L36">lib/ac-adapter.ts:36</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/bfdfc18/packages/my-observables/lib/ac-adapter.ts#L34">lib/ac-adapter.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -176,6 +176,12 @@
 					</li>
 				</ul>
 				<ul class="after-current">
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/quobservableparams.html" class="tsd-kind-icon">Qu<wbr>Observable<wbr>Params</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="../interfaces/quobservablevalue.html" class="tsd-kind-icon">Qu<wbr>Observable<wbr>Value</a>
+					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#diffs" class="tsd-kind-icon">diffs</a>
 					</li>
@@ -183,7 +189,13 @@
 						<a href="../globals.html#filter" class="tsd-kind-icon">filter</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#flatmap" class="tsd-kind-icon">flat<wbr>Map</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#getpluggedobservable" class="tsd-kind-icon">get<wbr>Plugged<wbr>Observable</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#getqupositiveobservable" class="tsd-kind-icon">get<wbr>QuPositive<wbr>Observable</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#getstatusdiffobservable" class="tsd-kind-icon">get<wbr>Status<wbr>Diff<wbr>Observable</a>
@@ -213,6 +225,12 @@
 						<a href="../globals.html#plugged" class="tsd-kind-icon">plugged</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#qu" class="tsd-kind-icon">qu</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="../globals.html#qupos" class="tsd-kind-icon">qu<wbr>Pos</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
 						<a href="../globals.html#statuses" class="tsd-kind-icon">statuses</a>
 					</li>
 					<li class=" tsd-kind-variable tsd-is-external">
@@ -224,6 +242,9 @@
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#checkstatus" class="tsd-kind-icon">check<wbr>Status</a>
 					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#getquobservable" class="tsd-kind-icon">get<wbr>QuObservable</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
@@ -233,59 +254,6 @@
 	<div class="container">
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
-			<ul class="tsd-legend">
-				<li class="tsd-kind-module"><span class="tsd-kind-icon">Module</span></li>
-				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
-				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
-				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
-				<li class="tsd-kind-function tsd-has-type-parameter"><span class="tsd-kind-icon">Function with type parameter</span></li>
-				<li class="tsd-kind-index-signature"><span class="tsd-kind-icon">Index signature</span></li>
-				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
-				<li class="tsd-kind-type-alias tsd-has-type-parameter"><span class="tsd-kind-icon">Type alias with type parameter</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-enum"><span class="tsd-kind-icon">Enumeration</span></li>
-				<li class="tsd-kind-enum-member"><span class="tsd-kind-icon">Enumeration member</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-enum"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-enum"><span class="tsd-kind-icon">Method</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-interface"><span class="tsd-kind-icon">Interface</span></li>
-				<li class="tsd-kind-interface tsd-has-type-parameter"><span class="tsd-kind-icon">Interface with type parameter</span></li>
-				<li class="tsd-kind-constructor tsd-parent-kind-interface"><span class="tsd-kind-icon">Constructor</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-interface"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-interface"><span class="tsd-kind-icon">Method</span></li>
-				<li class="tsd-kind-index-signature tsd-parent-kind-interface"><span class="tsd-kind-icon">Index signature</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-class"><span class="tsd-kind-icon">Class</span></li>
-				<li class="tsd-kind-class tsd-has-type-parameter"><span class="tsd-kind-icon">Class with type parameter</span></li>
-				<li class="tsd-kind-constructor tsd-parent-kind-class"><span class="tsd-kind-icon">Constructor</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-class"><span class="tsd-kind-icon">Property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class"><span class="tsd-kind-icon">Method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class"><span class="tsd-kind-icon">Accessor</span></li>
-				<li class="tsd-kind-index-signature tsd-parent-kind-class"><span class="tsd-kind-icon">Index signature</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-constructor tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited constructor</span></li>
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited"><span class="tsd-kind-icon">Inherited accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-protected"><span class="tsd-kind-icon">Protected accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private property</span></li>
-				<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private method</span></li>
-				<li class="tsd-kind-accessor tsd-parent-kind-class tsd-is-private"><span class="tsd-kind-icon">Private accessor</span></li>
-			</ul>
-			<ul class="tsd-legend">
-				<li class="tsd-kind-property tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static property</span></li>
-				<li class="tsd-kind-call-signature tsd-parent-kind-class tsd-is-static"><span class="tsd-kind-icon">Static method</span></li>
-			</ul>
 		</div>
 	</div>
 </footer>
@@ -294,6 +262,5 @@
 </div>
 <div class="overlay"></div>
 <script src="../assets/js/main.js"></script>
-<script>if (location.protocol == 'file:') document.write('<script src="../assets/js/search.js"><' + '/script>');</script>
 </body>
 </html>
