--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <main>
       <nav>
         <ul>
-          <li class='child' data-name="@khai96x/all" data-version="0.0.16" data-description="All packages within @khai96x" data-route="all/index.html" data-npm="https://www.npmjs.com/package/@khai96x/all">
+          <li class='child' data-name="@khai96x/all" data-version="0.0.17" data-description="All packages within @khai96x" data-route="all/index.html" data-npm="https://www.npmjs.com/package/@khai96x/all">
             <article>
               <a class='link name' target='@khai96x/all' href='all/index.html'>@khai96x/all</a>
-              <span class='version' title='version'>0.0.16</span>
+              <span class='version' title='version'>0.0.17</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/all'>[npm]</a>
               <p class='description'><span title='package description'>All packages within @khai96x</span></p>
             </article>
@@ -66,6 +66,14 @@
               <span class='version' title='version'>0.2.3</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/choose-text-editor'>[npm]</a>
               <p class='description'><span title='package description'>Get path to a text editor executable base on some environment variables</span></p>
+            </article>
+          </li>
+          <li class='child' data-name="@khai96x/git-utils" data-version="0.0.0" data-description="Convenient git subcommands" data-route="git-utils/index.html" data-npm="https://www.npmjs.com/package/@khai96x/git-utils">
+            <article>
+              <a class='link name' target='@khai96x/git-utils' href='git-utils/index.html'>@khai96x/git-utils</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/git-utils'>[npm]</a>
+              <p class='description'><span title='package description'>Convenient git subcommands</span></p>
             </article>
           </li>
           <li class='child' data-name="@khai96x/interval-observable-universe" data-version="0.0.4" data-description="A pool of interval observable" data-route="interval-observable-universe/index.html" data-npm="https://www.npmjs.com/package/@khai96x/interval-observable-universe">
@@ -106,6 +114,14 @@
               <span class='version' title='version'>0.0.0</span>
               <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/shebang'>[npm]</a>
               <p class='description'><span title='package description'>Extract shebang information from a file</span></p>
+            </article>
+          </li>
+          <li class='child' data-name="@khai96x/srcinfo" data-version="0.0.0" data-description="Parsing ArchLinux's .SRCINFO" data-route="srcinfo/index.html" data-npm="https://www.npmjs.com/package/@khai96x/srcinfo">
+            <article>
+              <a class='link name' target='@khai96x/srcinfo' href='srcinfo/index.html'>@khai96x/srcinfo</a>
+              <span class='version' title='version'>0.0.0</span>
+              <a class='npm' title='npm page' target='_blank' href='https://www.npmjs.com/package/@khai96x/srcinfo'>[npm]</a>
+              <p class='description'><span title='package description'>Parsing ArchLinux's .SRCINFO</span></p>
             </article>
           </li>
           <li class='child' data-name="@khai96x/utils" data-version="0.0.1" data-description="Utilities to be used by other packages" data-route="utils/index.html" data-npm="https://www.npmjs.com/package/@khai96x/utils">
