--- a/srcinfo/index.html
+++ b/srcinfo/index.html
@@ -75,6 +75,45 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#arrayfield" class="tsd-kind-icon">Array<wbr>Field</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#parseerror" class="tsd-kind-icon">Parse<wbr>Error</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#partialfield" class="tsd-kind-icon">Partial<wbr>Field</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#requiredfield" class="tsd-kind-icon">Required<wbr>Field</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#srcinfo" class="tsd-kind-icon">Src<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#srcinfolines" class="tsd-kind-icon">Src<wbr>Info<wbr>Lines</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#arrayfields" class="tsd-kind-icon">array<wbr>Fields</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#partialfields" class="tsd-kind-icon">partial<wbr>Fields</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#requiredfields" class="tsd-kind-icon">required<wbr>Fields</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#getarray" class="tsd-kind-icon">get<wbr>Array</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#getunique" class="tsd-kind-icon">get<wbr>Unique</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parseline" class="tsd-kind-icon">parse<wbr>Line</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parsesrcinfo" class="tsd-kind-icon">parse<wbr>Src<wbr>Info</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
