--- a/pacman/globals.html
+++ b/pacman/globals.html
@@ -61,6 +61,186 @@
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section tsd-is-external">
+							<h3>Interfaces</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-interface tsd-is-external"><a href="interfaces/quline.html" class="tsd-kind-icon">Qu<wbr>Line</a></li>
+								<li class="tsd-kind-interface tsd-is-external"><a href="interfaces/singlecycleupdatecheckerparams.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Params</a></li>
+								<li class="tsd-kind-interface tsd-is-external"><a href="interfaces/singlecycleupdatecheckerreturn.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Return</a></li>
+								<li class="tsd-kind-interface tsd-is-external"><a href="interfaces/tostring.html" class="tsd-kind-icon">To<wbr>String</a></li>
+								<li class="tsd-kind-interface tsd-is-external"><a href="interfaces/updatecheckerparams.html" class="tsd-kind-icon">Update<wbr>Checker<wbr>Params</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-external">
+							<h3>Type aliases</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-type-alias tsd-is-external"><a href="globals.html#stream" class="tsd-kind-icon">Stream</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-external">
+							<h3>Variables</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-variable tsd-is-external"><a href="globals.html#qu" class="tsd-kind-icon">QU</a></li>
+							</ul>
+						</section>
+						<section class="tsd-index-section tsd-is-external">
+							<h3>Functions</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#checkforupdates" class="tsd-kind-icon">check<wbr>For<wbr>Updates</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#checkforupdatessinglecycle" class="tsd-kind-icon">check<wbr>For<wbr>Updates<wbr>Single<wbr>Cycle</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#parsequline" class="tsd-kind-icon">parse<wbr>QuLine</a></li>
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#parsequstream" class="tsd-kind-icon">parse<wbr>QuStream</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+				<h2>Type aliases</h2>
+				<section class="tsd-panel tsd-member tsd-kind-type-alias tsd-is-external">
+					<a name="stream" class="tsd-anchor"></a>
+					<h3>Stream</h3>
+					<div class="tsd-signature tsd-kind-icon">Stream<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">AsyncIterable</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/tostring.html" class="tsd-signature-type">ToString</a><span class="tsd-signature-symbol">&gt;</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Iterable</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/tostring.html" class="tsd-signature-type">ToString</a><span class="tsd-signature-symbol">&gt;</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/parse-pacman-output.ts#L22">lib/parse-pacman-output.ts:22</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+				<h2>Variables</h2>
+				<section class="tsd-panel tsd-member tsd-kind-variable tsd-is-external">
+					<a name="qu" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagConst">Const</span> QU</h3>
+					<div class="tsd-signature tsd-kind-icon">QU<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = /(?&lt;name&gt;[^\s]+)\s+(?&lt;old&gt;[^\s]+)\s+-\&gt;\s+(?&lt;new&gt;[^\s]+)(?&lt;ignored&gt;\s+\[ignored\])?/i</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/utils/regexes.ts#L1">lib/utils/regexes.ts:1</a></li>
+						</ul>
+					</aside>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group tsd-is-external">
+				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="checkforupdates" class="tsd-anchor"></a>
+					<h3>check<wbr>For<wbr>Updates</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>For<wbr>Updates<span class="tsd-signature-symbol">(</span>params<span class="tsd-signature-symbol">?: </span><a href="interfaces/updatecheckerparams.html" class="tsd-signature-type">UpdateCheckerParams</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/check-for-updates.ts#L16">lib/check-for-updates.ts:16</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Run <code>pacman -Qu</code> and return a stream of results</p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> params: <a href="interfaces/updatecheckerparams.html" class="tsd-signature-type">UpdateCheckerParams</a><span class="tsd-signature-symbol"> = {}</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="checkforupdatessinglecycle" class="tsd-anchor"></a>
+					<h3>check<wbr>For<wbr>Updates<wbr>Single<wbr>Cycle</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">check<wbr>For<wbr>Updates<wbr>Single<wbr>Cycle<span class="tsd-signature-symbol">(</span>params<span class="tsd-signature-symbol">: </span><a href="interfaces/singlecycleupdatecheckerparams.html" class="tsd-signature-type">SingleCycleUpdateCheckerParams</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">AsyncGenerator</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/singlecycleupdatecheckerreturn.html" class="tsd-signature-type">SingleCycleUpdateCheckerReturn</a><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/check-for-updates.ts#L47">lib/check-for-updates.ts:47</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>If the date is due, check for updates, yield a single result, and update due date.</p>
+								</div>
+								<p>This function is to run in an interval.</p>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>params: <a href="interfaces/singlecycleupdatecheckerparams.html" class="tsd-signature-type">SingleCycleUpdateCheckerParams</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AsyncGenerator</span><span class="tsd-signature-symbol">&lt;</span><a href="interfaces/singlecycleupdatecheckerreturn.html" class="tsd-signature-type">SingleCycleUpdateCheckerReturn</a><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="parsequline" class="tsd-anchor"></a>
+					<h3>parse<wbr>QuLine</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">parse<wbr>QuLine<span class="tsd-signature-symbol">(</span>line<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="interfaces/quline.html" class="tsd-signature-type">QuLine</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/parse-pacman-output.ts#L6">lib/parse-pacman-output.ts:6</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Parse a single line of <code>pacman -Qu</code></p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>line: <span class="tsd-signature-type">string</span></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="interfaces/quline.html" class="tsd-signature-type">QuLine</a><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></h4>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="parsequstream" class="tsd-anchor"></a>
+					<h3>parse<wbr>QuStream</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">parse<wbr>QuStream<span class="tsd-signature-symbol">(</span>input<span class="tsd-signature-symbol">: </span><a href="globals.html#stream" class="tsd-signature-type">Stream</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/d970e58/packages/pacman/lib/parse-pacman-output.ts#L25">lib/parse-pacman-output.ts:25</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Parse an stdout stream of <code>pacman -Qu</code></p>
+								</div>
+							</div>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>input: <a href="globals.html#stream" class="tsd-signature-type">Stream</a></h5>
+								</li>
+							</ul>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">any</span></h4>
+						</li>
+					</ul>
+				</section>
+			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 			<nav class="tsd-navigation primary">
@@ -72,6 +252,39 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/quline.html" class="tsd-kind-icon">Qu<wbr>Line</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/singlecycleupdatecheckerparams.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Params</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/singlecycleupdatecheckerreturn.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Return</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/tostring.html" class="tsd-kind-icon">To<wbr>String</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/updatecheckerparams.html" class="tsd-kind-icon">Update<wbr>Checker<wbr>Params</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#stream" class="tsd-kind-icon">Stream</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#qu" class="tsd-kind-icon">QU</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#checkforupdates" class="tsd-kind-icon">check<wbr>For<wbr>Updates</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#checkforupdatessinglecycle" class="tsd-kind-icon">check<wbr>For<wbr>Updates<wbr>Single<wbr>Cycle</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parsequline" class="tsd-kind-icon">parse<wbr>QuLine</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parsequstream" class="tsd-kind-icon">parse<wbr>QuStream</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
