--- a/pacman/index.html
+++ b/pacman/index.html
@@ -75,6 +75,39 @@
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/quline.html" class="tsd-kind-icon">Qu<wbr>Line</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/singlecycleupdatecheckerparams.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Params</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/singlecycleupdatecheckerreturn.html" class="tsd-kind-icon">Single<wbr>Cycle<wbr>Update<wbr>Checker<wbr>Return</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/tostring.html" class="tsd-kind-icon">To<wbr>String</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/updatecheckerparams.html" class="tsd-kind-icon">Update<wbr>Checker<wbr>Params</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-is-external">
+						<a href="globals.html#stream" class="tsd-kind-icon">Stream</a>
+					</li>
+					<li class=" tsd-kind-variable tsd-is-external">
+						<a href="globals.html#qu" class="tsd-kind-icon">QU</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#checkforupdates" class="tsd-kind-icon">check<wbr>For<wbr>Updates</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#checkforupdatessinglecycle" class="tsd-kind-icon">check<wbr>For<wbr>Updates<wbr>Single<wbr>Cycle</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parsequline" class="tsd-kind-icon">parse<wbr>QuLine</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#parsequstream" class="tsd-kind-icon">parse<wbr>QuStream</a>
+					</li>
 				</ul>
 			</nav>
 		</div>
