--- a/git-utils/index.html
+++ b/git-utils/index.html
@@ -91,6 +91,9 @@
 						<a href="globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
