--- a/git-utils/interfaces/param.html
+++ b/git-utils/interfaces/param.html
@@ -94,7 +94,7 @@
 					<div class="tsd-signature tsd-kind-icon">fuzzy<wbr>Finder<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L57">lib/browse-git-files.ts:57</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L81">lib/browse-git-files.ts:81</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">untracked<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L58">lib/browse-git-files.ts:58</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L82">lib/browse-git-files.ts:82</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -146,6 +146,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a>
