--- a/git-utils/globals.html
+++ b/git-utils/globals.html
@@ -83,6 +83,7 @@
 						<section class="tsd-index-section tsd-is-external">
 							<h3>Functions</h3>
 							<ul class="tsd-index-list">
+								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a></li>
 								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a></li>
 								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#gitstatus" class="tsd-kind-icon">git<wbr>Status</a></li>
 								<li class="tsd-kind-function tsd-is-external"><a href="globals.html#lines" class="tsd-kind-icon">lines</a></li>
@@ -109,7 +110,7 @@
 					<div class="tsd-signature tsd-kind-icon">PORCELAIN_<wbr>STATUS_<wbr>REGEX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">RegExp</span><span class="tsd-signature-symbol"> = /^(?&lt;status&gt;..) (?&lt;name&gt;.*)$/</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L31">lib/browse-git-files.ts:31</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L34">lib/browse-git-files.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -119,13 +120,30 @@
 					<div class="tsd-signature tsd-kind-icon">set<wbr>Aur<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = require.resolve(&#x27;./bin/git-set-aur&#x27;)</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/index.ts#L1">index.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/index.ts#L1">index.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
 				<h2>Functions</h2>
+				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
+					<a name="findreporoot" class="tsd-anchor"></a>
+					<h3>find<wbr>Repo<wbr>Root</h3>
+					<ul class="tsd-signatures tsd-kind-function tsd-is-external">
+						<li class="tsd-signature tsd-kind-icon">find<wbr>Repo<wbr>Root<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L52">lib/browse-git-files.ts:52</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">&gt;</span></h4>
+						</li>
+					</ul>
+				</section>
 				<section class="tsd-panel tsd-member tsd-kind-function tsd-is-external">
 					<a name="gitlsfiles" class="tsd-anchor"></a>
 					<h3>git<wbr>LsFiles</h3>
@@ -136,7 +154,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L21">lib/browse-git-files.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L24">lib/browse-git-files.ts:24</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AsyncGenerator</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -153,7 +171,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L39">lib/browse-git-files.ts:39</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L42">lib/browse-git-files.ts:42</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AsyncGenerator</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -170,7 +188,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L12">lib/browse-git-files.ts:12</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L15">lib/browse-git-files.ts:15</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -193,7 +211,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L61">lib/browse-git-files.ts:61</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L85">lib/browse-git-files.ts:85</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -216,7 +234,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L33">lib/browse-git-files.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L36">lib/browse-git-files.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -239,7 +257,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L87">lib/browse-git-files.ts:87</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L111">lib/browse-git-files.ts:111</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -262,7 +280,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L49">lib/browse-git-files.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L62">lib/browse-git-files.ts:62</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">AsyncGenerator</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -278,7 +296,7 @@
 					<div class="tsd-signature tsd-kind-icon">spawn<wbr>Options<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">object</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L4">lib/browse-git-files.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L7">lib/browse-git-files.ts:7</a></li>
 						</ul>
 					</aside>
 					<section class="tsd-panel tsd-member tsd-kind-variable tsd-parent-kind-object-literal tsd-is-external">
@@ -287,7 +305,7 @@
 						<div class="tsd-signature tsd-kind-icon">stdio<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">(</span><span class="tsd-signature-type">"pipe"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"inherit"</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;pipe&#x27;, &#x27;pipe&#x27;, &#x27;inherit&#x27;]</span></div>
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L5">lib/browse-git-files.ts:5</a></li>
+								<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L8">lib/browse-git-files.ts:8</a></li>
 							</ul>
 						</aside>
 					</section>
@@ -318,6 +336,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a>
