--- a/git-utils/interfaces/chunk.html
+++ b/git-utils/interfaces/chunk.html
@@ -97,7 +97,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L9">lib/browse-git-files.ts:9</a></li>
+									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L12">lib/browse-git-files.ts:12</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
@@ -139,6 +139,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a>
