--- a/git-utils/interfaces/gitstatus.html
+++ b/git-utils/interfaces/gitstatus.html
@@ -94,7 +94,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L28">lib/browse-git-files.ts:28</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L31">lib/browse-git-files.ts:31</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">status<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/9233710/packages/git-utils/lib/browse-git-files.ts#L27">lib/browse-git-files.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/6bd49b6/packages/git-utils/lib/browse-git-files.ts#L30">lib/browse-git-files.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -146,6 +146,9 @@
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="../globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="../globals.html#gitlsfiles" class="tsd-kind-icon">git<wbr>LsFiles</a>
