--- a/git-utils/index.html
+++ b/git-utils/index.html
@@ -71,24 +71,39 @@
 					<li class="globals  ">
 						<a href="globals.html"><em>Globals</em></a>
 					</li>
+					<li class="label tsd-is-external">
+						<span>Externals</span>
+					</li>
+					<li class=" tsd-kind-namespace tsd-is-external">
+						<a href="modules/browsegitfiles.html">browse<wbr>Git<wbr>Files</a>
+					</li>
 				</ul>
 			</nav>
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="interfaces/base.html" class="tsd-kind-icon">Base</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
 						<a href="interfaces/chunk.html" class="tsd-kind-icon">Chunk</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="interfaces/gitstatus.html" class="tsd-kind-icon">Git<wbr>Status</a>
+						<a href="interfaces/status.html" class="tsd-kind-icon">Status</a>
 					</li>
 					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="interfaces/param.html" class="tsd-kind-icon">Param</a>
-					</li>
-					<li class=" tsd-kind-variable tsd-is-external">
-						<a href="globals.html#porcelain_status_regex" class="tsd-kind-icon">PORCELAIN_<wbr>STATUS_<wbr>REGEX</a>
+						<a href="interfaces/value.html" class="tsd-kind-icon">Value</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter tsd-is-external">
+						<a href="globals.html#assertincludes" class="tsd-kind-icon">assert<wbr>Includes</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#browsegitfilesprogram" class="tsd-kind-icon">browse<wbr>Git<wbr>Files<wbr>Program</a>
+					</li>
+					<li class=" tsd-kind-function tsd-is-external">
+						<a href="globals.html#changedfiles" class="tsd-kind-icon">changed<wbr>Files</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
 						<a href="globals.html#findreporoot" class="tsd-kind-icon">find<wbr>Repo<wbr>Root</a>
@@ -103,16 +118,10 @@
 						<a href="globals.html#lines" class="tsd-kind-icon">lines</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
-						<a href="globals.html#main" class="tsd-kind-icon">main</a>
+						<a href="globals.html#parseporcelainstatus" class="tsd-kind-icon">parse<wbr>Porcelain<wbr>Status</a>
 					</li>
 					<li class=" tsd-kind-function tsd-is-external">
-						<a href="globals.html#parseporcelainline" class="tsd-kind-icon">parse<wbr>Porcelain<wbr>Line</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-external">
-						<a href="globals.html#program" class="tsd-kind-icon">program</a>
-					</li>
-					<li class=" tsd-kind-function tsd-is-external">
-						<a href="globals.html#untrackedfiles" class="tsd-kind-icon">untracked<wbr>Files</a>
+						<a href="globals.html#parseporcelainstatusvalue" class="tsd-kind-icon">parse<wbr>Porcelain<wbr>Status<wbr>Value</a>
 					</li>
 					<li class=" tsd-kind-object-literal tsd-is-external">
 						<a href="globals.html#spawnoptions" class="tsd-kind-icon">spawn<wbr>Options</a>
