--- a/git-utils/interfaces/value.html
+++ b/git-utils/interfaces/value.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Chunk | @khai96x/git-utils — Reference</title>
+	<title>Value | @khai96x/git-utils — Reference</title>
 	<meta name="description" content="Documentation for @khai96x/git-utils — Reference">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="chunk.html">Chunk</a>
+					<a href="value.html">Value</a>
 				</li>
 			</ul>
-			<h1>Interface Chunk</h1>
+			<h1>Interface Value</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,12 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Chunk</span>
+						<a href="base.html" class="tsd-signature-type">Base</a>
+						<ul class="tsd-hierarchy">
+							<li>
+								<span class="target">Value</span>
+							</li>
+						</ul>
 					</li>
 				</ul>
 			</section>
@@ -77,32 +82,48 @@
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section tsd-is-external">
-							<h3>Methods</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-interface tsd-is-external"><a href="chunk.html#tostring" class="tsd-kind-icon">to<wbr>String</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external"><a href="value.html#plain" class="tsd-kind-icon">plain</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="value.html#staged" class="tsd-kind-icon">staged</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface tsd-is-external"><a href="value.html#unstaged" class="tsd-kind-icon">unstaged</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group tsd-is-external">
-				<h2>Methods</h2>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-interface tsd-is-external">
-					<a name="tostring" class="tsd-anchor"></a>
-					<h3>to<wbr>String</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-interface tsd-is-external">
-						<li class="tsd-signature tsd-kind-icon">to<wbr>String<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/522c762/packages/git-utils/lib/utils/lines.ts#L4">lib/utils/lines.ts:4</a></li>
-								</ul>
-							</aside>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
-						</li>
-					</ul>
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external">
+					<a name="plain" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> plain</h3>
+					<div class="tsd-signature tsd-kind-icon">plain<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<p>Inherited from <a href="base.html">Base</a>.<a href="base.html#plain">plain</a></p>
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/522c762/packages/git-utils/lib/parse-porcelain-status.ts#L5">lib/parse-porcelain-status.ts:5</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="staged" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> staged</h3>
+					<div class="tsd-signature tsd-kind-icon">staged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"?"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"A"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"D"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"M"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">" "</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/522c762/packages/git-utils/lib/parse-porcelain-status.ts#L14">lib/parse-porcelain-status.ts:14</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+					<a name="unstaged" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagReadonly">Readonly</span> unstaged</h3>
+					<div class="tsd-signature tsd-kind-icon">unstaged<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"?"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"M"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">"D"</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">" "</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/KSXGitHub/personal-packages/blob/522c762/packages/git-utils/lib/parse-porcelain-status.ts#L15">lib/parse-porcelain-status.ts:15</a></li>
+						</ul>
+					</aside>
 				</section>
 			</section>
 		</div>
@@ -119,24 +140,30 @@
 					<li class=" tsd-kind-interface tsd-is-external">
 						<a href="base.html" class="tsd-kind-icon">Base</a>
 					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="chunk.html" class="tsd-kind-icon">Chunk</a>
+					</li>
+					<li class=" tsd-kind-interface tsd-is-external">
+						<a href="status.html" class="tsd-kind-icon">Status</a>
+					</li>
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface tsd-is-external">
-						<a href="chunk.html" class="tsd-kind-icon">Chunk</a>
+						<a href="value.html" class="tsd-kind-icon">Value</a>
 						<ul>
-							<li class=" tsd-kind-method tsd-parent-kind-interface tsd-is-external">
-								<a href="chunk.html#tostring" class="tsd-kind-icon">to<wbr>String</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-inherited tsd-is-external">
+								<a href="value.html#plain" class="tsd-kind-icon">plain</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="value.html#staged" class="tsd-kind-icon">staged</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface tsd-is-external">
+								<a href="value.html#unstaged" class="tsd-kind-icon">unstaged</a>
 							</li>
 						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
-					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="status.html" class="tsd-kind-icon">Status</a>
-					</li>
-					<li class=" tsd-kind-interface tsd-is-external">
-						<a href="value.html" class="tsd-kind-icon">Value</a>
-					</li>
 					<li class=" tsd-kind-variable">
 						<a href="../globals.html#setaur" class="tsd-kind-icon">set<wbr>Aur</a>
 					</li>
